manifests/02-demo-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpcdemo
spec:
  type: ClusterIP
  selector:
    app: grpcdemo
  ports:
  - port: 8080
    name: http2 #must match the backend protocol defined in LB
    protocol: TCP
    targetPort: 8080
