manifests/04-istio-default-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-default-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grpc-istio-demo-tls # must be the same as secret and requires for end to end TLS with http2
    hosts:
    - "*"
