manifests/05-istio-default-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grpc-istio-demo
  namespace: istio-system
spec:
  parentRefs:
  - kind: Gateway
    name: grpcdemo
    namespace:  default
  hostnames:
  - "gke-grpc-gateway-api.chimbuc.dns.doit-playground.com"
  rules:
  - backendRefs:
    - name: istio-ingressgateway
      port: 443
